###############################################################################
set(lhal_path "${SDK_PATH}/drivers/lhal")
set(drivers_path "${SDK_PATH}/drivers")
set(rfparam_path "${SDK_PATH}/drivers/rfparam")
set(std_path "${SDK_PATH}/drivers/soc/bl808/std")
set(bsp_path "${SDK_PATH}/bsp/board/bl808dk")
set(components_path "${SDK_PATH}/components")
###############################################################################
# blsdk_drivers
add_library(blsdk_drivers STATIC EXCLUDE_FROM_ALL)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_irq.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_common.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_adc.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_acomp.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_cks.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_ef_ctrl.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_gpio.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_i2c.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_dma.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_rtc.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_sec_aes.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_sec_sha.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_sec_trng.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_spi.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_timer.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_uart.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_wdg.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_flash.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/flash/bflb_sf_cfg.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/flash/bflb_xip_sflash.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/flash/bflb_sflash.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/flash/bflb_sf_ctrl.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_dac.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_emac.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_ir.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_mjpeg.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_pwm_v2.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_cam.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_csi.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_i2s.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_wo.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_irq.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_l1c.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/src/bflb_mtimer.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/include/arch/risc-v/t-head/rv_hart.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/include/arch/risc-v/t-head/rv_pmp.c)
target_sources(blsdk_drivers PRIVATE ${lhal_path}/config/bl808/device_table.c)
target_include_directories(blsdk_drivers PUBLIC ${lhal_path}/include)
target_include_directories(blsdk_drivers PUBLIC ${lhal_path}/include/hardware)
target_include_directories(blsdk_drivers PUBLIC ${lhal_path}/include/compiler)
target_include_directories(blsdk_drivers PUBLIC ${lhal_path}/include/arch)
target_include_directories(blsdk_drivers PUBLIC ${lhal_path}/include/arch/risc-v/t-head)
target_include_directories(blsdk_drivers PUBLIC ${lhal_path}/include/arch/risc-v/t-head/Core/Include)
target_include_directories(blsdk_drivers PUBLIC ${lhal_path}/include/arch/risc-v/t-head/csi_dsp/include)
target_include_directories(blsdk_drivers PUBLIC ${lhal_path}/config/bl808)
target_include_directories(blsdk_drivers PUBLIC ${lhal_path}/src/flash)
target_link_libraries(blsdk_drivers PRIVATE ${lhal_path}/include/arch/risc-v/t-head/csi_dsp/lib/libcsi_xt900p32f_dsp.a)
target_link_libraries(blsdk_drivers PRIVATE ${lhal_path}/src/pka/libpka.a)
target_sources(blsdk_drivers PRIVATE ${std_path}/startup/m0/start.S)
target_sources(blsdk_drivers PRIVATE ${std_path}/startup/m0/vector.S)
target_sources(blsdk_drivers PRIVATE ${std_path}/startup/m0/riscv_fpu.S)
target_sources(blsdk_drivers PRIVATE ${std_path}/startup/m0/start_load.c)
target_sources(blsdk_drivers PRIVATE ${std_path}/startup/m0/system_bl808.c)
target_sources(blsdk_drivers PRIVATE ${std_path}/startup/m0/interrupt.c)
target_sources(blsdk_drivers PRIVATE ${std_path}/src/bl808_aon.c)
target_sources(blsdk_drivers PRIVATE ${std_path}/src/bl808_clock.c)
target_sources(blsdk_drivers PRIVATE ${std_path}/src/bl808_common.c)
target_sources(blsdk_drivers PRIVATE ${std_path}/src/bl808_ef_cfg.c)
target_sources(blsdk_drivers PRIVATE ${std_path}/src/bl808_glb.c)
target_sources(blsdk_drivers PRIVATE ${std_path}/src/bl808_glb_gpio.c)
target_sources(blsdk_drivers PRIVATE ${std_path}/src/bl808_hbn.c)
target_sources(blsdk_drivers PRIVATE ${std_path}/src/bl808_l1c.c)
target_sources(blsdk_drivers PRIVATE ${std_path}/src/bl808_pds.c)
target_sources(blsdk_drivers PRIVATE ${std_path}/src/bl808_sdh.c)
target_sources(blsdk_drivers PRIVATE ${std_path}/src/bl808_tzc_sec.c)
target_sources(blsdk_drivers PRIVATE ${std_path}/src/bl808_psram_uhs.c)
target_sources(blsdk_drivers PRIVATE ${std_path}/src/bl808_uhs_phy.c)
target_sources(blsdk_drivers PRIVATE ${std_path}/src/bl808_ipc.c)
target_sources(blsdk_drivers PRIVATE ${std_path}/port/bl808_clock.c)
target_include_directories(blsdk_drivers PUBLIC ${std_path}/include)
target_include_directories(blsdk_drivers PUBLIC ${std_path}/include/hardware)
target_compile_definitions(blsdk_drivers PUBLIC CONFIG_IRQ_NUM=80)
###############################################################################
add_library(blsdk_components_wifi6 STATIC IMPORTED)
# set_target_properties(blsdk_components_wifi6 PROPERTIES IMPORTED_LOCATION ${components_path}/wireless/wifi6/lib/libwifi6.a)
set_target_properties(blsdk_components_wifi6 PROPERTIES IMPORTED_LOCATION ${PROJECT_SOURCE_DIR}/libwifi.a)
set_property(TARGET blsdk_components_wifi6 PROPERTY IMPORTED_LINK_INTERFACE_LIBRARIES blsdk_components_lwip)
set_property(TARGET blsdk_components_wifi6 PROPERTY IMPORTED_LINK_INTERFACE_LIBRARIES blsdk_components_mbedtls)
###############################################################################
add_library(blsdk_components_phy STATIC IMPORTED)
set_target_properties(blsdk_components_phy PROPERTIES IMPORTED_LOCATION ${drivers_path}/soc/bl616/phyrf/lib-gcc_10.2.0-toolchain_V2.6.1/libbl616_phyrf.a)
set_property(TARGET blsdk_components_phy PROPERTY IMPORTED_LINK_INTERFACE_LIBRARIES blsdk_components_utils_getopt)
###############################################################################
add_library(blsdk_components_wifi STATIC EXCLUDE_FROM_ALL)
target_sources(blsdk_components_wifi PUBLIC ${components_path}/wireless/wifi6/bl6_os_adapter/src/platform_bouffalo_sdk.c)
target_sources(blsdk_components_wifi PUBLIC ${components_path}/wireless/wifi6/bl6_os_adapter/src/rtos_al.c)
target_include_directories(blsdk_components_wifi PUBLIC ${components_path}/wireless/wifi6/bl6_os_adapter/include)
target_include_directories(blsdk_components_wifi PUBLIC ${components_path}/wireless/wifi6/inc)
target_link_libraries(blsdk_components_wifi PRIVATE blsdk_components_os)
target_link_libraries(blsdk_components_wifi PUBLIC blsdk_components_wifi6)
target_link_libraries(blsdk_components_wifi PUBLIC blsdk_components_phy)
target_compile_definitions(blsdk_components_wifi PRIVATE CONFIG_VIF_MAX=2)
target_compile_definitions(blsdk_components_wifi PRIVATE CONFIG_STA_MAX=4)
target_compile_definitions(blsdk_components_wifi PUBLIC CONFIG_MAC_TXQ_DEPTH=32)
target_compile_definitions(blsdk_components_wifi PUBLIC CONFIG_MAC_RXQ_DEPTH=12)
target_compile_definitions(blsdk_components_wifi PRIVATE BOUFFALO_SDK)
###############################################################################
# Components
add_library(blsdk_components_mm STATIC EXCLUDE_FROM_ALL)
target_sources(blsdk_components_mm PRIVATE ${components_path}/mm/mem.c)
target_sources(blsdk_components_mm PRIVATE ${components_path}/mm/tlsf/tlsf.c )
target_sources(blsdk_components_mm PRIVATE ${components_path}/mm/tlsf/bflb_tlsf.c)
target_include_directories(blsdk_components_mm PUBLIC ${components_path}/mm)
target_include_directories(blsdk_components_mm PUBLIC ${components_path}/mm/tlsf)
target_link_libraries(blsdk_components_mm PUBLIC blsdk_drivers)
target_compile_definitions(blsdk_components_mm PUBLIC configSTACK_ALLOCATION_FROM_SEPARATE_HEAP=1)
###############################################################################
# FreeRTOS
add_library(blsdk_components_os STATIC EXCLUDE_FROM_ALL)
target_sources(blsdk_components_os PRIVATE ${components_path}/os/freertos/croutine.c)
target_sources(blsdk_components_os PRIVATE ${components_path}/os/freertos/event_groups.c)
target_sources(blsdk_components_os PRIVATE ${components_path}/os/freertos/list.c)
target_sources(blsdk_components_os PRIVATE ${components_path}/os/freertos/queue.c)
target_sources(blsdk_components_os PRIVATE ${components_path}/os/freertos/tasks.c)
target_sources(blsdk_components_os PRIVATE ${components_path}/os/freertos/timers.c)
target_sources(blsdk_components_os PRIVATE ${components_path}/os/freertos/timers.c)
target_sources(blsdk_components_os PRIVATE ${components_path}/os/freertos/freertos_port.c)
target_sources(blsdk_components_os PRIVATE ${components_path}/os/freertos/portable/MemMang/heap_3.c)
target_sources(blsdk_components_os PRIVATE ${components_path}/os/freertos/portable/GCC/RISC-V/portStatTrap.c)
target_sources(blsdk_components_os PRIVATE ${components_path}/os/freertos/portable/GCC/RISC-V/common/port.c)
target_sources(blsdk_components_os PRIVATE ${components_path}/os/freertos/portable/GCC/RISC-V/common/portASM.S)
target_include_directories(blsdk_components_os PUBLIC ${components_path}/os/freertos/include)
target_include_directories(blsdk_components_os PUBLIC ${components_path}/os/freertos/portable/GCC/RISC-V/common)
target_include_directories(blsdk_components_os PUBLIC ${components_path}/os/freertos/portable/GCC/RISC-V/common/chip_specific_extensions/RV32I_CLINT_no_extensions)
target_include_directories(blsdk_components_os PUBLIC ${PROJECT_SOURCE_DIR}) # FreeRTOSConfig.h
target_compile_definitions(blsdk_components_os PUBLIC CONFIG_FREERTOS)
target_compile_definitions(blsdk_components_os PUBLIC portasmHANDLE_INTERRUPT=interrupt_entry)
target_compile_definitions(blsdk_components_os PUBLIC default_interrupt_handler=freertos_risc_v_trap_handler)
target_link_libraries(blsdk_components_os PUBLIC blsdk_drivers)
###############################################################################
# Utils
add_library(blsdk_components_log STATIC EXCLUDE_FROM_ALL)
target_sources(blsdk_components_log PRIVATE ${components_path}/utils/log/log.c)
target_sources(blsdk_components_log PRIVATE ${components_path}/utils/log/log.c)
target_sources(blsdk_components_log PRIVATE ${components_path}/utils/log/bflog/bflog.c)
target_include_directories(blsdk_components_log PUBLIC ${components_path}/utils/log)
target_include_directories(blsdk_components_log PUBLIC ${components_path}/utils/log/bflog)
target_compile_definitions(blsdk_components_log PUBLIC CONFIG_LOG)
target_compile_definitions(blsdk_components_log PUBLIC CONFIG_LOG_LEVEL=3)
target_link_libraries(blsdk_components_log PUBLIC blsdk_drivers)
###############################################################################
# FatFS
add_library(blsdk_components_fatfs STATIC EXCLUDE_FROM_ALL)
target_sources(blsdk_components_fatfs PRIVATE ${components_path}/fs/fatfs/ff.c)
target_sources(blsdk_components_fatfs PRIVATE ${components_path}/fs/fatfs/diskio.c)
target_sources(blsdk_components_fatfs PRIVATE ${components_path}/fs/fatfs/ffsystem.c)
target_sources(blsdk_components_fatfs PRIVATE ${components_path}/fs/fatfs/ffunicode.c)
target_sources(blsdk_components_fatfs PRIVATE ${components_path}/fs/fatfs/diskio.c)
target_include_directories(blsdk_components_fatfs PUBLIC ${components_path}/fs/fatfs)
target_include_directories(blsdk_components_fatfs PUBLIC ${PROJECT_SOURCE_DIR}) # fatfs_conf_user.h
###############################################################################
# Timestamp
add_library(blsdk_components_timestamp STATIC EXCLUDE_FROM_ALL)
target_sources(blsdk_components_timestamp PRIVATE ${components_path}/utils/bflb_timestamp/bflb_timestamp.c)
target_include_directories(blsdk_components_timestamp PUBLIC ${components_path}/utils/bflb_timestamp)
###############################################################################
# Libc
add_library(blsdk_components_libc STATIC EXCLUDE_FROM_ALL)
target_sources(blsdk_components_libc PRIVATE ${components_path}/libc/snprintf.c)
target_sources(blsdk_components_libc PRIVATE ${components_path}/libc/sprintf.c)
target_sources(blsdk_components_libc PRIVATE ${components_path}/libc/vsprintf.c)
target_sources(blsdk_components_libc PRIVATE ${components_path}/libc/vsnprintf.c)
target_sources(blsdk_components_libc PRIVATE ${components_path}/libc/printf.c)
target_link_libraries(blsdk_components_libc PUBLIC blsdk_drivers)
target_link_libraries(blsdk_components_libc PUBLIC blsdk_components_mm)
target_link_libraries(blsdk_components_libc PUBLIC blsdk_components_fatfs)
target_compile_options(blsdk_components_libc PUBLIC -fno-builtin)
target_link_options(blsdk_components_libc PUBLIC -Wl,-wrap,snprintf)
target_link_options(blsdk_components_libc PUBLIC -Wl,-wrap,sprintf)
###############################################################################
# Utils
add_library(blsdk_components_utils_getopt STATIC EXCLUDE_FROM_ALL)
target_sources(blsdk_components_utils_getopt PRIVATE ${components_path}/utils/getopt/utils_getopt.c)
target_include_directories(blsdk_components_utils_getopt PUBLIC  ${components_path}/utils/getopt)
###############################################################################
add_library(blsdk_components_lwip STATIC EXCLUDE_FROM_ALL)
target_compile_definitions(blsdk_components_lwip PUBLIC CONFIG_LWIP)
target_compile_definitions(blsdk_components_lwip PUBLIC CONFIG_LWIP_LP)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/apps/lwiperf/lwiperf.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/apps/http/fs.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/api/api_lib.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/api/api_msg.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/api/err.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/api/netbuf.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/api/netdb.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/api/netifapi.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/api/sockets.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/api/tcpip.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv4/autoip.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv4/dhcp.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv4/etharp.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv4/icmp.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv4/igmp.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv4/ip4_addr.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv4/ip4_frag.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv4/ip4.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv6/dhcp6.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv6/ethip6.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv6/ethip6.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv6/icmp6.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv6/inet6.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv6/ip6.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv6/ip6_addr.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv6/ip6_frag.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv6/mld6.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ipv6/nd6.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/def.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/dns.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/inet_chksum.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/init.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/ip.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/mem.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/memp.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/netif.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/pbuf.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/raw.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/stats.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/sys.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/tcp_in.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/tcp_out.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/tcp.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/timeouts.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/core/udp.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/src/netif/ethernet.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip/lwip-port/FreeRTOS/sys_arch.c)
target_sources(blsdk_components_lwip PRIVATE ${components_path}/net/lwip/lwip_apps/dhcpd/dhcp_server_raw.c)
target_include_directories(blsdk_components_lwip PUBLIC ${components_path}/net/lwip/lwip/lwip-port)
target_include_directories(blsdk_components_lwip PUBLIC ${components_path}/net/lwip/lwip/lwip-port/config)
target_include_directories(blsdk_components_lwip PUBLIC ${components_path}/net/lwip/lwip/src/include)
target_include_directories(blsdk_components_lwip PUBLIC ${components_path}/net/lwip/lwip/src/include/compat/posix)
target_include_directories(blsdk_components_lwip PUBLIC ${components_path}/net/lwip/lwip_apps/dhcpd)
target_include_directories(blsdk_components_lwip PUBLIC ${PROJECT_SOURCE_DIR})
target_link_libraries(blsdk_components_lwip PRIVATE blsdk_components_os)
target_link_libraries(blsdk_components_lwip PRIVATE blsdk_components_wifi)
###############################################################################
add_library(blsdk_components_mbedtls STATIC EXCLUDE_FROM_ALL)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/os/freertos/croutine.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/aes.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/aesni.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/arc4.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/aria.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/asn1parse.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/asn1write.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/base64.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/blowfish.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/camellia.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/ccm.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/certs.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/chacha20.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/chachapoly.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/cipher.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/cipher_wrap.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/cmac.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/constant_time.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/ctr_drbg.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/debug.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/des.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/dhm.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/ecdh.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/ecdsa.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/ecjpake.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/ecp.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/ecp_curves.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/entropy.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/entropy_poll.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/error.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/gcm.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/havege.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/hkdf.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/hmac_drbg.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/md2.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/md4.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/md5.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/md.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/memory_buffer_alloc.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/mps_reader.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/mps_trace.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/nist_kw.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/oid.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/padlock.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/pem.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/pk.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/pkparse.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/pkcs11.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/pkcs12.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/pkcs5.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/pk_wrap.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/pkwrite.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/platform.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/platform_util.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/poly1305.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/ripemd160.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/rsa.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/rsa_internal.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/sha1.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/sha256.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/sha512.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/ssl_cache.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/ssl_ciphersuites.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/ssl_cli.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/ssl_cookie.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/ssl_msg.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/ssl_srv.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/ssl_ticket.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/ssl_tls13_keys.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/ssl_tls.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/threading.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/timing.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/version.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/version_features.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/x509.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/x509_create.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/x509_crl.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/x509_crt.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/x509_csr.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/x509write_crt.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/x509write_csr.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/mbedtls/library/xtea.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/port/net_sockets.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/port/entropy_poll_alt.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/port/hw_acc/aes_alt.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/port/hw_acc/aes_alt.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/port/hw_acc/sha1_alt.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/port/hw_acc/sha256_alt.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/port/hw_acc/sha512_alt.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/port/bignum.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/port/hw_acc/bignum_alt.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/port/hw_acc/ecp_alt.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/port/hw_acc/ecp_curves_alt.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/port/hw_acc/bignum_ext.c)
target_sources(blsdk_components_mbedtls PRIVATE ${components_path}/crypto/mbedtls/port/sec_mutex.c)
target_compile_definitions(blsdk_components_mbedtls PUBLIC MBEDTLS_NET_C)
target_compile_definitions(blsdk_components_mbedtls PUBLIC CONFIG_MBEDTLS_AES_USE_HW)
target_compile_definitions(blsdk_components_mbedtls PUBLIC CONFIG_MBEDTLS_SHA1_USE_HW)
target_compile_definitions(blsdk_components_mbedtls PUBLIC CONFIG_MBEDTLS_SHA256_USE_HW)
target_compile_definitions(blsdk_components_mbedtls PUBLIC CONFIG_MBEDTLS_SHA512_USE_HW)
target_compile_definitions(blsdk_components_mbedtls PUBLIC CONFIG_MBEDTLS_ECC_USE_HW)
target_compile_definitions(blsdk_components_mbedtls PUBLIC CONFIG_MBEDTLS)
target_compile_definitions(blsdk_components_mbedtls PUBLIC MBEDTLS_CONFIG_FILE=\"mbedtls_sample_config.h\")
target_include_directories(blsdk_components_mbedtls PUBLIC ${components_path}/crypto/mbedtls/mbedtls/include)
target_include_directories(blsdk_components_mbedtls PUBLIC ${components_path}/crypto/mbedtls/port)
target_include_directories(blsdk_components_mbedtls PUBLIC ${components_path}/crypto/mbedtls/port/hw_acc)
target_include_directories(blsdk_components_mbedtls PUBLIC ${components_path}/crypto/mbedtls/mbedtls/library)
target_link_libraries(blsdk_components_mbedtls PRIVATE blsdk_components_os)
target_link_libraries(blsdk_components_mbedtls PRIVATE blsdk_components_mm)
target_link_libraries(blsdk_components_mbedtls PRIVATE blsdk_components_lwip)
###############################################################################
add_library(blsdk_bsp_fw_header STATIC EXCLUDE_FROM_ALL)
target_sources(blsdk_bsp_fw_header PRIVATE ${bsp_path}/fw_header.c)
target_include_directories(blsdk_bsp_fw_header PUBLIC ${bsp_path})
target_link_options(blsdk_bsp_fw_header PUBLIC -ufw_header)
target_link_libraries(blsdk_bsp_fw_header PUBLIC blsdk_drivers)
target_link_libraries(blsdk_bsp_fw_header PUBLIC blsdk_components_libc)
# target_compile_definitions(blsdk_bsp PUBLIC CONFIG_PSRAM)
###############################################################################
add_library(blsdk_components_bl_os_adapter STATIC EXCLUDE_FROM_ALL)
target_sources(blsdk_components_bl_os_adapter PRIVATE ${PROJECT_SOURCE_DIR}/components/bl_os_adapter/bl_os_hal.c)
target_include_directories(blsdk_components_bl_os_adapter PUBLIC ${PROJECT_SOURCE_DIR}/components/bl_os_adapter/include)
target_include_directories(blsdk_components_bl_os_adapter PUBLIC ${PROJECT_SOURCE_DIR}/components/bl_os_adapter)
target_link_libraries(blsdk_components_bl_os_adapter PUBLIC blsdk_components_os)
target_link_libraries(blsdk_components_bl_os_adapter PUBLIC blsdk_components_log)
target_compile_definitions(blsdk_components_bl_os_adapter PUBLIC OS_USING_FREERTOS)
###############################################################################
add_library(blsdk_components_yloop STATIC EXCLUDE_FROM_ALL)
target_sources(blsdk_components_yloop PRIVATE ${PROJECT_SOURCE_DIR}/components/yloop/src/aos_freertos.c)
# target_sources(blsdk_components_yloop PRIVATE ${PROJECT_SOURCE_DIR}/components/yloop/src/device.c)
# target_sources(blsdk_components_yloop PRIVATE ${PROJECT_SOURCE_DIR}/components/yloop/src/local_event.c)
target_sources(blsdk_components_yloop PRIVATE ${PROJECT_SOURCE_DIR}/components/yloop/src/select.c)
target_sources(blsdk_components_yloop PRIVATE ${PROJECT_SOURCE_DIR}/components/yloop/src/yloop.c)
target_include_directories(blsdk_components_yloop PUBLIC ${PROJECT_SOURCE_DIR}/components/yloop/include)
target_include_directories(blsdk_components_yloop PUBLIC ${PROJECT_SOURCE_DIR}/components/yloop)
target_link_libraries(blsdk_components_yloop PUBLIC blsdk_components_os)
###############################################################################
